# Sibilla

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
SblaAdapter/: CMakeLists.txt
SblaAdapter/OneBot/: CMakeLists.txt
SblaAdapter/OneBot/Header/: OneBot.h
SblaAdapter/OneBot/Source/: OneBot.cpp
SblaCLI/: CMakeLists.txt
SblaCLI/Header/: Console.h  GlobalInstance.h  Loader.h  SblaCLI.h
SblaCLI/Source/: Console.cpp  GlobalInstace.cpp  Loader.cpp  SblaCLI.cpp  main.cpp
SblaChatBot/: CMakeLists.txt
SblaChatBot/Liz/: CMakeLists.txt
SblaChatBot/Liz/Header/: Liz.h
SblaChatBot/Liz/Source/: Liz.cpp
SblaCore/: CMakeLists.txt
SblaCore/Header/SblaCore/: Config.h  Macros.h
SblaCore/Header/SblaCore/DataProtocol/: Chatbot.h  Protocol.h
SblaCore/Header/SblaCore/DataProtocol/Action/: Request.h  Response.h
SblaCore/Header/SblaCore/DataProtocol/Event/: Event.h  EventData.h
SblaCore/Header/SblaCore/DataProtocol/Message/: Message.h
SblaCore/Header/SblaCore/Message/: Message.h  MessageRecv.h  MessageSend.h  SingleMsg.h
SblaCore/Header/SblaCore/Utils/: Singleton.h  UUID.h
SblaCore/Header/SblaInterface/: Exports.h  IAdapter.h  IChatBot.h  ILogger.h  Macros.h  Plugin.h
SblaCore/Source/SblaCore/: Config.cpp  SblaCore.cpp
SblaCore/Source/SblaCore/Utils/: UUID.cpp
SblaCore/Source/SblaInterface/: IAdapter.cpp  ILogger.cpp  Plugin.cpp
SblaPlugin/: CMakeLists.txt
SblaPlugin/Header/: PluginConfig.h  SblaPlugin.h
SblaPlugin/Source/: Liz.cpp  OneBot.cpp  PluginConfig.cpp  PluginMain.cpp
SblaPlugin/cmake/: PluginConfig.h.in
SblaSandBox/: ConfigTemplate.cfg  ConfigTemplate.conf  ConfigTemplate.toml
SibillaAdapter/: CMakeLists.txt
SibillaAdapter/OneBot/: CMakeLists.txt
SibillaAdapter/OneBot/Header/: OneBot.h
SibillaAdapter/OneBot/Source/: OneBot.cpp
SibillaCLI/: CMakeLists.txt
SibillaCLI/Header/: Console.h  Message.h  SibillaCLI.h
SibillaCLI/Header/ChatBot/: Adapter.h  ChatBot.h
SibillaCLI/Header/ChatBot/Adapter/: OneBot.h
SibillaCLI/Header/Message/: Message.h  MessageRecv.h  MessageSend.h  SingleMsg.h
SibillaCLI/Header/Utils/: Singleton.h  Utils.h
SibillaCLI/SibillaCLI/: Console.h  SibillaCLI.h
SibillaCLI/SibillaCLI/ChatBot/: Adapter.h  ChatBot.h  ChatBox.h
SibillaCLI/SibillaCLI/ChatBot/Adapter/Napcat/: NapcatAdapter.h
SibillaCLI/SibillaCLI/Command/: Command.h
SibillaCLI/SibillaCLI/Logger/: Logger.h
SibillaCLI/SibillaCLI/MessageHub/: MessageHub.h
SibillaCLI/SibillaCLI/Utils/: Config.h  GlobalInstance.h  Singleton.h  Uuid.h
SibillaCLI/Source/: Console.cpp  Message.cpp  SibillaCLI.cpp  main.cpp
SibillaCLI/Source/ChatBot/: Adapter.cpp  ChatBot.cpp
SibillaCLI/Source/ChatBot/Adapter/: OneBot.cpp
SibillaCLI/Source/Command/: Command.cpp
SibillaCLI/Source/Logger/: Logger.cpp
SibillaCLI/Source/MessageHub/: MessageHub.cpp
SibillaCLI/Source/Utils/: Config.cpp  GlobalInstace.cpp  Utils.cpp  Uuid.cpp
SibillaChatBot/: CMakeLists.txt
SibillaChatBot/Liz/: CMakeLists.txt
SibillaChatBot/Liz/Header/: Liz.h
SibillaChatBot/Liz/Source/: Liz.cpp
SibillaCommon/: CMakeLists.txt
SibillaCommon/Header/: Export.h  Logger.h  Macros.h  SibillaCommon.h
SibillaCommon/Header/Message/: Message.h  MessageRecv.h  MessageSend.h  SingleMsg.h
SibillaCommon/Header/Utils/: Singleton.h  Utils.h
SibillaCommon/Source/: Logger.cpp  SibillaCommon.cpp
SibillaCommon/Source/Utils/: Utils.cpp
triplets/: x64-linux.cmake  x64-windows.cmake
